--- a/Module4-Solution/index.html
+++ b/Module4-Solution/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+	body {
+  background-color: lightblue;
+}
+</style>
 	<title></title>
 </head>
-<body background-color: lightblue;>
+<body>
 	<h1>------------------------- My module-4 solution ------------------------</h1>
   <h2>-------------------Right click here and inspect element to check the console out--------------------</h2>
 	<script src="script.js" ="text/javascript">
