--- a/Module4-Solution/index.html
+++ b/Module4-Solution/index.html
@@ -3,8 +3,14 @@
 <head>
 <style>
 	body {
-  background-color: green;
+  background-color: lightblue;
 }
+	h1 {
+  color: green;
+}
+	h2 {
+  color: darkblue;
+}		
 </style>
 	<title></title>
 </head>
